# foodikal

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  neon.yml
api/: .gitignore  .gitignore-back  drizzle.config.ts  eslint.config.js  hub.config.ts  ley.config.cjs  package-lock.json  package.json  tsconfig.node.json  tsconfig.worker.json  vitest.config.ts  wrangler.jsonc
api/drizzle/: 0000_noisy_maggott.sql  0000_steady_scarlet_spider.sql
api/drizzle/meta/: 0000_snapshot.json  _journal.json
api/public/: swagger.yml
api/src/: application-context-middleware.ts  data-source.ts  elasticsearch-logs-middleware.ts  index.ts  views.ts
api/src/controllers/: movement-controller.ts  warehouse-controller.ts
api/src/db/: application-context-middleware.ts  drizzle.config.ts  index.ts  migrate.ts  schema.ts  seed.ts
api/src/entity/: Order.ts
api/src/model/: application-storage.ts  error-causes.ts  google-objects.ts  inventory-management-store.ts  tenant.ts
api/src/services/: movement-service.ts
api/tests/: mock-store.ts
bot/telegram-bot/: .gitignore  pyproject.toml
docs/telegram-bot/: wrangler.toml
goods/: package-lock.json  package.json  wrangler.json
telegram-bot/: .env.example  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
telegram-bot/src/: application-context-middleware.ts  index.ts
terraform/: .gitignore  Makefile  backend.example.conf  main.tf  variables.tf
web/: index.html  package-lock.json  package.json
web/public/: site.webmanifest
web/src/: App.css  App.tsx  index.css
(+28 files in other folders)
