[project]
name = "telegram-bot"
version = "0.0.0"
description = ""
authors = [
    {name = "Kolenka Inc",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "telegram_bot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
